--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,24 +10,28 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
+    "@heroui/react": "^2.7.11",
+    "@heroui/theme": "^2.4.17",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.10.0",
-    "framer-motion": "^12.19.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.19.2",
     "lucide-react": "^0.522.0",
     "next": "15.3.4",
     "next-auth": "^4.24.11",
+    "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "recharts": "^3.0.0"
+    "recharts": "^3.0.0",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
-    "tailwindcss": "^4",
     "typescript": "^5"
   }
 }
